# observer

./: .gitignore  CMakeLists.txt  LICENSE  azure-pipelines.yml  readme.md
.github/workflows/: c-cpp.yml  codeql-analysis.yml  main.yml
cmake/: config.cmake.in
include/csari/: observer.hpp
observer/: CMakeLists.txt
observer/include/csari/: observer.hpp
test/: CMakeLists.txt
test/src/: pipe.cpp  unit.cpp
